--- a/public/pages/cart/index.html
+++ b/public/pages/cart/index.html
@@ -8,35 +8,35 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../../styles/index.css">
-    <link rel="stylesheet" href="../../../styles/header.css">
-    <link rel="stylesheet" href="../../../styles/footer.css">
-    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href=".../../../.../../../.../../../styles/index.css">
+    <link rel="stylesheet" href=".../../../.../../../.../../../styles/header.css">
+    <link rel="stylesheet" href=".../../../.../../../.../../../styles/footer.css">
+    <link rel="stylesheet" href="../../../styles/style.css">
 
 </head>
 <body>
     <header>
         <nav>
-          <a href="../../../index.html">
+          <a href=".../../../.../../../.../../../index.html">
             <button class="nav-btn-header">Home</button>
         </a>
-        <a href="../../pages/sobre/index.html">
+        <a href=".../../../.../../../pages/sobre/index.html">
             <button class="nav-btn-header">Sobre</button>
         </a>
 
-        <a href="../../pages/login/index.html">
+        <a href=".../../../.../../../pages/login/index.html">
             <button class="nav-btn-header">Login</button>
         </a>
         </nav>
         <div class="sub-container-header">
             <div class="cart-container">
-                <a href="./public/pages/cart/index.html">
-                    <img class="carticon" src="../../../assets/carticon.png" alt="">
+                <a href="../../../public/pages/cart/index.html">
+                    <img class="carticon" src=".../../../.../../../.../../../assets/carticon.png" alt="">
                 </a>
             </div>
             <div class="account-icon-container">
                 <a href="">
-                    <img class="icon" src="../../../assets/accounticon.svg" alt="">
+                    <img class="icon" src=".../../../.../../../.../../../assets/accounticon.svg" alt="">
                 </a>
             </div>
         </div>
@@ -47,7 +47,7 @@
 
         <section class="cart-item">
             <div class="item-details">
-                <img src="./assets/mochila-product.png" alt="Mochila temática">
+                <img src="../../../assets/mochila-product.png" alt="Mochila temática">
                 <div>
                     <h3>Mochila temática</h3>
                     <p>Mochila temática</p>
@@ -67,7 +67,7 @@
 
         <section class="cart-item">
             <div class="item-details">
-                <img src="./assets/mug-product.png" alt="Caneca">
+                <img src="../../../assets/mug-product.png" alt="Caneca">
                 <div>
                     <h3>Caneca</h3>
                     <p>Lembranças</p>
@@ -87,7 +87,7 @@
 
         <section class="cart-item">
             <div class="item-details">
-                <img src="./assets/t-shirt-product.png" alt="Camiseta">
+                <img src="../../../assets/t-shirt-product.png" alt="Camiseta">
                 <div>
                     <h3>Camiseta</h3>
                     <p>Mochila temática</p>
@@ -119,9 +119,9 @@
         <nav>
             <div class="sections">
                 <h1>Seções</h1>
-                <a href="./public/pages/login/index.html"><h2>Login</h2></a>
-                <a href="./public/pages/sobre/index.html"><h2>Sobre nós</h2></a>
-                <a href="./public/pages/cart/index.html"><h2>Carrinho</h2></a>
+                <a href="../../../public/pages/login/index.html"><h2>Login</h2></a>
+                <a href="../../../public/pages/sobre/index.html"><h2>Sobre nós</h2></a>
+                <a href="../../../public/pages/cart/index.html"><h2>Carrinho</h2></a>
             </div>
             <div class="contact">
                 <h1>Contato</h1>
@@ -137,7 +137,7 @@
             </div>
         </nav>
         <div class="footer-logo">
-            <img src="../../../assets/logo-icon.svg" alt="">
+            <img src=".../../../.../../../.../../../assets/logo-icon.svg" alt="">
         </div>
     </footer>
 </body>
