--- a/public/pages/sobre/index.html
+++ b/public/pages/sobre/index.html
@@ -2,100 +2,113 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../../styles/index.css">
-    <link rel="stylesheet" href="../../../styles/header.css">
-    <link rel="stylesheet" href="../../../styles/footer.css">
-    <link rel="stylesheet" href="./styles/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="../../../styles/index.css">
+  <link rel="stylesheet" href="../../../styles/header.css">
+  <link rel="stylesheet" href="../../../styles/footer.css">
+  <link rel="stylesheet" href="./styles/style.css">
 
-    <title>Sobre nós</title>
+  <title>Sobre nós</title>
 </head>
 
 <body>
 
-    <header>
-        <nav>
-          <a href="../../../index.html">
-            <button class="nav-btn-header">Home</button>
+  <header>
+    <nav>
+      <a href="../../../index.html">
+        <button class="nav-btn-header">Home</button>
+      </a>
+      <a href="../../pages/sobre/index.html">
+        <button class="nav-btn-header">Sobre</button>
+      </a>
+
+      <a href="../../pages/login/index.html">
+        <button class="nav-btn-header">Login</button>
+      </a>
+    </nav>
+    <div class="sub-container-header">
+      <div class="cart-container">
+        <a href="../../pages/cart/index.html">
+          <img class="carticon" src="../../../assets/carticon.png" alt="">
         </a>
-        <a href="../../pages/sobre/index.html">
-            <button class="nav-btn-header">Sobre</button>
+      </div>
+      <div class="account-icon-container">
+        <a href="">
+          <img class="icon" src="../../../assets/accounticon.svg" alt="">
         </a>
-
-        <a href="../../pages/login/index.html">
-            <button class="nav-btn-header">Login</button>
+      </div>
+    </div>
+  </header>
+  <main>
+    <div class="img-container">
+      <img src="../../../assets/Itachi.png" alt="">
+    </div>
+    <div class="desc-container">
+      <div class="sub-desc-container">
+        <img src="../../../assets/sobre-label.svg" alt="">
+        <p>Somos uma loja especializada em produtos personalizados inspirados na lendária Akatsuki. Nossa missão
+          é trazer para os fãs itens exclusivos, de alta qualidade, que refletem o poder e a essência da
+          organização mais icônica do mundo ninja. Se você é um verdadeiro seguidor do legado da Akatsuki,
+          aqui é o seu lugar!</p>
+      </div>
+    </div>
+  </main>
+  <footer>
+    <nav>
+      <div class="sections">
+        <h1>Seções</h1>
+        <a href="../../../public/pages/login/index.html">
+          <h2>Login</h2>
         </a>
-        </nav>
-        <div class="sub-container-header">
-            <div class="cart-container">
-                <a href="./public/pages/cart/index.html">
-                    <img class="carticon" src="../../../assets/carticon.png" alt="">
-                </a>
-            </div>
-            <div class="account-icon-container">
-                <a href="">
-                    <img class="icon" src="../../../assets/accounticon.svg" alt="">
-                </a>
-            </div>
-        </div>
-    </header>
-    <main>
-        <div class="img-container">
-            <img src="../../../assets/Itachi.png" alt="">
-        </div>
-        <div class="desc-container">
-            <div class="sub-desc-container">
-                <img src="../../../assets/sobre-label.svg" alt="">
-                <p>Somos uma loja especializada em produtos personalizados inspirados na lendária Akatsuki. Nossa missão
-                    é trazer para os fãs itens exclusivos, de alta qualidade, que refletem o poder e a essência da
-                    organização mais icônica do mundo ninja. Se você é um verdadeiro seguidor do legado da Akatsuki,
-                    aqui é o seu lugar!</p>
-            </div>
-        </div>
-    </main>
-    <footer>
-        <nav>
-            <div class="sections">
-                <h1>Seções</h1>
-                <a href="./public/pages/login/index.html"><h2>Login</h2></a>
-                <a href="./public/pages/sobre/index.html"><h2>Sobre nós</h2></a>
-                <a href="./public/pages/cart/index.html"><h2>Carrinho</h2></a>
-            </div>
-            <div class="contact">
-                <h1>Contato</h1>
-                <h2>Akatsuki.uv@gmail.com</h2>
-                <h2>(11) 91426-2903 </h2>
-                <h2>4321-1234</h2>
-            </div>
-            <div class="links">
-                <h1>Links</h1>
-                <h2>Instagram</h2>
-                <h2>Facebook</h2>
-                <h2>Whatsapp</h2>
-            </div>
-        </nav>
-        <div class="footer-logo">
-            <img src="../../../assets/logo-icon.svg" alt="">
-        </div>
-    </footer>
+        <a href="../../../public/pages/sobre/index.html">
+          <h2>Sobre nós</h2>
+        </a>
+        <a href="../../../public/pages/cart/index.html">
+          <h2>Carrinho</h2>
+        </a>
+      </div>
+      <div class="contact">
+        <h1>Contato</h1>
+        <h2>Akatsuki.uv@gmail.com</h2>
+        <h2>(11) 91426-2903 </h2>
+        <h2>4321-1234</h2>
+      </div>
+      <div class="links">
+        <h1>Links</h1>
+        <h2>Instagram</h2>
+        <h2>Facebook</h2>
+        <h2>Whatsapp</h2>
+      </div>
+    </nav>
+    <div class="footer-logo">
+      <img src="../../../assets/logo-icon.svg" alt="">
+    </div>
+  </footer>
 
 
 
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
