--- a/public/pages/cart/index.html
+++ b/public/pages/cart/index.html
@@ -30,13 +30,13 @@
         </nav>
         <div class="sub-container-header">
             <div class="cart-container">
-                <a href="../../../public/pages/cart/index.html">
-                    <img class="carticon" src=".../../../.../../../.../../../assets/carticon.png" alt="">
+              <a href="../../pages/cart/index.html">
+                <img class="carticon" src="../../../assets/carticon.png" alt="">
                 </a>
             </div>
             <div class="account-icon-container">
                 <a href="">
-                    <img class="icon" src=".../../../.../../../.../../../assets/accounticon.svg" alt="">
+                    <img class="icon" src="../../../assets/accounticon.svg" alt="">
                 </a>
             </div>
         </div>
