--- a/public/pages/login/index.html
+++ b/public/pages/login/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Akatsuki.Uv</title>
     <link rel="shortcut icon" href="../../../assets/accounticon.ico" type="image/x-icon">
+    <script src="../../../controllers/loginControllers.js"></script>    
+    <script src="../../../data/usersData.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
@@ -16,7 +18,7 @@
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 
-<body>
+<body onload="LoadData()">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <header>
         <nav>
@@ -57,20 +59,21 @@
                         <p>Preencha as informações para entrar em sua conta</p>
                     </div>
                 </div>
-                <form action="">
-                    <input type="text" id="" placeholder="Usuario ou Email">
-                    <input type="text" id="" placeholder="Senha">
+                <form onsubmit="return Login()">
+                    <input type="text" id="userInput" placeholder="Usuario ou Email">
+                    <input type="text" id="passwordInput" placeholder="Senha">
                     <a href="../../pages/resetpassword/index.html">Esqueci minha senha</a>
                     <button type="submit">Entrar</button>
-
                 </form>
+                <div id="messageBox" style="display: none; margin-top: 10px; padding: 10px; border-radius: 5px;"></div>
                 <div class="register-btn-area">
                     <a href="../../pages/register/index.html">
-                        <button class="register-btn">
+                        <button type="submit" class="register-btn">
                             Registrar
                         </button>
                     </a>
                 </div>
+
 
             </div>
         </div>
@@ -100,7 +103,10 @@
             <img src="../../../assets/logo-icon.svg" alt="">
         </div>
     </footer>
-
+    <script type="module">
+        import { Login } from '../../../controllers/loginControllers.js';
+        window.Login = Login;
+      </script>
 </body>
 
 </html>
